# mangos-classic

./: CMakeLists.txt  createprojects.bat
.github/workflows/: macos.yml
cmake/Hunter/: config.cmake
doc/: script_commands.txt
sql/playerbot/: characters_playerbot_saved_data_001.sql
src/game/: CMakeLists.txt  CharacterHandler.cpp  Chat.cpp  Creature.cpp  Group.cpp  Object.cpp  Object.h  ObjectGuid.cpp  ObjectGuid.h  ObjectMgr.cpp  ObjectMgr.h  Player.cpp  Player.h  Spell.cpp  SpellAuras.cpp  SpellEffects.cpp  SpellMgr.cpp  TargetedMovementGenerator.cpp  TargetedMovementGenerator.h  Unit.cpp  Unit.h  WaypointMovementGenerator.cpp  World.cpp  WorldSession.cpp  WorldSession.h  pchdef.h
src/game/AI/: CreatureAIRegistry.cpp
src/game/AI/EventAI/: CreatureEventAI.cpp  CreatureEventAI.h  CreatureEventAIMgr.cpp
src/game/AI/ScriptDevAI/scripts/kalimdor/: desolace.cpp
src/game/AI/ScriptDevAI/scripts/kalimdor/temple_of_ahnqiraj/: temple_of_ahnqiraj.cpp
src/game/AI/ScriptDevAI/scripts/world/: world_map_scripts.cpp
src/game/Accounts/: AccountMgr.cpp
src/game/Chat/: Chat.cpp  Chat.h  ChatHandler.cpp  Level2.cpp  Level3.cpp
src/game/Combat/: ThreatManager.cpp
src/game/CreatureGroup/: CreatureGroup.cpp  CreatureGroup.h  CreatureGroupDefs.h  Formation.cpp  Formation.h
src/game/DBScripts/: ScriptMgr.cpp  ScriptMgr.h
src/game/Entities/: CharacterHandler.cpp  Creature.cpp  Creature.h  CreatureLinkingMgr.cpp  CreatureLinkingMgr.h  EntitiesMgr.h  Player.cpp  Player.h  Unit.cpp  Unit.h
src/game/Formation/: Formation.cpp  Formation.h  FormationDefs.h
src/game/Groups/: Group.cpp
src/game/Maps/: Map.cpp  Map.h
src/game/MotionGenerators/: MotionMaster.cpp  MotionMaster.h  PathFinder.cpp  PathFinder.h  TargetedMovementGenerator.cpp  TargetedMovementGenerator.h  WaypointMovementGenerator.cpp  WaypointMovementGenerator.h
src/game/Movement/: MoveSpline.h
src/game/Pools/: PoolManager.cpp  PoolManager.h
src/game/Quests/: QuestHandler.cpp
src/game/Server/: WorldSession.cpp  WorldSocket.cpp
src/game/Spells/: Spell.cpp  SpellEffects.cpp
src/game/World/: World.cpp
src/game/playerbot/: PlayerbotAI.cpp
src/game/playerbot/AI/: PlayerbotDruidAI.cpp  PlayerbotMageAI.cpp
src/game/playerbot/Base/: PlayerbotAI.cpp
src/mangosd/: Main.cpp  Master.cpp
src/realmd/: AuthSocket.cpp  AuthSocket.h  Main.cpp
src/shared/: CMakeLists.txt  Common.h  Util.cpp  Util.h
src/shared/Auth/: BigNumber.cpp  BigNumber.h  HMACSHA1.cpp  HMACSHA1.h  Sha1.cpp  Sha1.h  md5.h
src/shared/Config/: Config.cpp
src/shared/Database/: Database.cpp  Database.h  DatabaseMysql.h  QueryResultMysql.h
src/shared/Network/: Listener.hpp  NetworkThread.hpp  Socket.cpp  Socket.hpp
src/shared/SRP6/: SRP6.cpp
